socklog 0.5.5
  * socklog.c, socklog-conf.c, uncat.c: cleanup, avoid compiler warnings
  * doc: install.html: typos

socklog 0.5.4
Sun, 30 Dec 2001 19:18:29 +0100
  * uncat: new option -o: once, exit on eof
  * uncat: manpage adapted
  * doc: minor changes
  * socklog: trim 0-characters
  * Makefile: use ./support/compile, ./support/load

socklog 0.5.1
Tue, 20 Nov 2001 11:36:23 +0100
  * package socklog moved to smarden.org

socklog 0.5.0
Fri, 16 Nov 2001 15:53:07 +0100
  * minor beautification
  * deb: reorganized debian/rules

socklog 0.4.6
Sun, 11 Nov 2001 15:08:22 +0100
  * socklog: changed undocumented option -v to -V
  * Makefile: does not require gnu make (thx Jordan Krushen)
  * socklog-conf added
  * run socklog with softlimit
  * socklog-group mandatory, notify pipe mode 0620
  * doc: upgrade.html, socklog-conf.8.html, socklog-conf.8 added
  * doc: adapted

socklog 0.4.1
Fri, 12 Oct 2001 11:04:29 +0200
  * uncat: continue; on error_again, fixes wrong timeouts
  * uncat: more verbose on -v
  * deb: moved to unofficial, fhs failures
  * socklog-notify: use mailsubj
  * doc: improved configuration.html
  * doc: how to disable log event notifications

socklog 0.4.0
Fri, 21 Sep 2001 17:43:09 +0200
  * changed to new primary email address <pape@smarden.org>
  * BSD license
  * doc: minor changes

socklog 0.3.6
Mon, 17 Sep 2001 18:26:12 +0200
  * doc: updated

socklog 0.3.5
Sun, 16 Sep 2001 20:12:01 +0200
  * new: tryto, uncat
  * new: network logging concept
  * new: log event notification
  * deb: cleaner binary package (rm -rf (socklog/{compile,etc,doc,man})

socklog 0.3.0
Tue, 14 Aug 2001 12:26:02 +0200
  * installs into /package (see http://cr.yp.to/slashpackage.html)
  * no code changes

socklog 0.2.2
Fri, 22 Jun 2001 11:59:10 +0200  
  * LDFLAGS for solaris in Makefile
  * doc: benefits.html added, describing logfile rotation based on file size

socklog 0.2.1
Tue, 19 Jun 2001 11:48:28 +0200
  * support for solaris (thx Gary Gendel)