@@ -40,7 +40,7 @@ EOT
 			--no-create-home --group adm log
 	fi
 	( \
-	cd /package/admin/socklog-0.5.4
+	cd /package/admin/socklog-0.6.0
 	package/upgrade
 	)
 
