@@ -32,6 +32,10 @@ starts
 and feeds the data into
 .IR prog 's
 standard input.
+.IR prog 's
+standard output is redirected to standard error.
+.B uncat
+never writes to standard output.
 .LP
 .I prog
 consist of one or more arguments.
